# takasaki.dev

./: Cargo.toml  README.md  index.html
assets/sass/: home.scss
assets/sass/extras/: stars.scss
release/: index-4a1c3ab20925635f.js  index-4a1c3ab20925635f_bg.wasm  index-d60dc2eeeffac9ef.css  index-d86f8876855cdc05.css  index.html
src/: lib.rs
src/pages/: home.rs  mod.rs
