[package]
name = "takasaki-dev-homepage"
version = "0.1.0"
authors = ["Takasakiii <lucasmc2709@live.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]


[dependencies]
wasm-bindgen = "0.2.63"
yew = "0.18"
yew-router = "0.15.0"

[dev-dependencies]
wasm-bindgen-test = "0.3.13"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
